# omni-sdk

./: .all-contributorsrc  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: docs.yml  publish.yml  release-please.yml  test.yml
1.1.0/: 404.html  index.html  objects.inv
1.1.0/api/OmniApiClient/: index.html
1.1.0/api/OmniDashboardEmbedder/: index.html
1.1.0/api/OmniFilterDefinition/: index.html
1.1.0/api/OmniFilterSet/: index.html
1.1.0/search/: search_index.json
1.1.0/usage/api_client/: index.html
1.1.0/usage/dashboard_embedding/: index.html
2.0.0/: 404.html  index.html
2.0.0/api/OmniDashboardEmbedder/: index.html
2.0.0/api/OmniFilterDefinition/: index.html
2.0.0/api/OmniFilterSet/: index.html
2.0.0/search/: search_index.json
2.0.0/usage/api_client/: index.html
2.0.0/usage/dashboard_embedding/: index.html
2.1.0/: index.html  objects.inv
2.1.0/api/OmniApiClient/: index.html
2.1.0/api/OmniDashboardEmbedder/: index.html
2.1.0/api/OmniFilterDefinition/: index.html
2.1.0/api/OmniFilterSet/: index.html
2.1.0/search/: search_index.json
2.1.0/usage/dashboard_embedding/: index.html
cassettes/: test_refresh_model
docs/: index.md  mkdocs.yml
docs/api/: OmniDashboardEmbedder.md  OmniFilterDefinition.md  OmniFilterSet.md
docs/docs/: api_reference.md  index.md
docs/docs/api/: OmniApiClient.md  OmniDashboardEmbedder.md  OmniFilterDefinition.md
docs/docs/usage/: api_client.md  dashboard_embedding.md
docs/usage/: api_client.md  dashboard_embedding.md
src/omni/: __init__.py  client.py  config.py  embed.py  env.py  utils.py
tests/: __init__.py  test_client.py  test_embed.py
tests/cassettes/: test_refresh_model
