[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "omni-analytics-sdk"
version = "1.0.0"

authors = [
  { name="Daniel Tiesling", email="daniel.tiesling@camo.ag" },
]
description = "Omni Analytics Python SDK."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python >= 3.9",
    "requests"
]

[project.urls]
"Homepage" = "https://tillable.github.io/omni-sdk/stable/"
"Repository" = "https://github.com/tillable/omni-sdk"
"Documentation" = "https://tillable.github.io/omni-sdk/stable/"

[tool]
[tool.hatch.version]
path = "src/omni/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omni"]

[tool.poetry]
name = "omni-analytics-sdk"
description = "Omni Analytics Python SDK."
version = "0.1.0"
authors = ["Daniel Tiesling <daniel.tiesling@camo.ag>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
coverage = "^7.5.3"
pytest-cov = "^5.0.0"
black = "^24.4.2"
vcrpy = "^6.0.1"
types-requests = "<2.31.0.7"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.11"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
hatch = "^1.12.0"
mike = "^2.0.0"

[tool.mypy]
packages = "src"
strict = true
disallow_untyped_calls = false
warn_return_any = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

