[project]
name = "omni-analytics-sdk"
version = "2.0.0"
description = "Omni Analytics Python SDK."
authors = [{ name = "Daniel Tiesling", email = "daniel.tiesling@camo.ag" }]
requires-python = ">=3.10, <3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://camoag.github.io/omni-sdk/stable/"
Repository = "https://github.com/camoag/omni-sdk"
Documentation = "https://camoag.github.io/omni-sdk/stable/"

[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.10.0,<2",
    "pytest>=8.2.2,<9",
    "coverage>=7.5.3,<8",
    "pytest-cov>=5.0.0,<6",
    "black>=24.4.2,<25",
    "vcrpy>=6.0.1,<7",
    "types-requests<2.31.0.7",
]
docs = [
    "mkdocs-material>=9.4.11,<10",
    "mkdocstrings[python]>=0.30.0,<0.31",
    "hatch>=1.12.0,<2",
    "mike>=2.0.0,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.version]
path = "src/omni/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omni"]

[tool.mypy]
packages = "src"
strict = true
disallow_untyped_calls = false
warn_return_any = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

